--- a/vercel.json
+++ b/vercel.json
@@ -2,16 +2,13 @@
   "public": true,
   "functions": {
     "api/index.js": {
-      "includeFiles": "_static/test.js"
-    },
-    "index.js": {
-      "includeFiles": "test.txt"
+      "includeFiles": "_static/**"
     }
   },
-  "redirects": [
+  "rewrites": [
     {
-      "source": "/((?!api).*)",
-      "destination": "/api/index"
+      "source": "/(.*)",
+      "destination": "/api"
     }
   ]
 }
