add safe compare

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/peterjcaulfield/vercel-serverless#readme",
   "dependencies": {
+    "safe-compare": "^1.1.4",
     "static-auth": "^2.0.0"
   }
 }
